ingress/axionui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: axionui-ingress
spec:
  ingressClassName: nginx
  rules: 
    - host: axionui.robintech.online
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service: 
                name: axionui-service
                port:
                  number: 9000
